<resources>
    <string name="app_name">Muhammad Project</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>
    <string name="played">Have You Played Before?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="waiting">Waiting List</string>
    <string name="search">Search Now</string>
    <string name="whatisyourpositin">What Is The Position That You Played In Before?</string>
    <string name="writedown">Write Down</string>
    <string name="writedown1">Write Down</string>
    <string name="or">Or..</string>
    <string name="or1">OR CHOOSE POSITION</string>
    <string name="gk">Goal Kepper</string>
    <string name="def">DEFENDER</string>
    <string name="def1">L DEFENDER</string>
    <string name="def2">L Def</string>
    <string name="def3">R Def</string>
    <string name="def4">R Back</string>
    <string name="def5">L Back</string>
</resources>
